# plumaria

./: .gitignore  LICENSE  README.md  __init__.py  palettes.py  pyproject.toml
.github/workflows/: release.yml
docs/: index.html
examples/: build_gallery_html.py  cvd_demo.py  gallery_demo.py  overview_demo.py  palettes_demo.py
src/plumaria/: __init__.py  cvd.py  gallery.py  palettes.py
tests/: test_cvd.py  test_palettes.py
