[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plumaria"
version = "0.1.0"
description = "Paletas de cores colorblind-safe derivadas de plumagens de aves (categórica + colormaps)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Nivaldo Vasconcelos", email = "nivaldo.vasconcelos@ufpe.br" },
]
keywords = ["colormap", "palette", "colorblind", "matplotlib", "dataviz", "aves"]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
# Registrar colormaps/ajustar rcParams exige matplotlib; a galeria (cards) e a
# simulação de daltonismo (módulo `cvd`) exigem também colorspacious. O acesso
# às cores (categorical/hex_to_rgb) roda só com numpy, sem estes extras.
viz = ["matplotlib>=3.5", "colorspacious>=1.1"]
dev = ["pytest>=7.0", "matplotlib>=3.5", "colorspacious>=1.1"]

[project.urls]
Homepage = "https://github.com/napvasconcelos/plumaria"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
